# emaildnscheck

./: README.md  pyproject.toml
src/emaildnscheck/: __init__.py  bimi.py  cli.py  constants.py  dmarc.py  dnssec.py  exceptions.py  mtasts.py  mx.py  regex.py  smtp.py  smtptls.py  spf.py  utils.py
tests/: conftest.py
